# 4240DemoReady

./: .gitignore  demo.sh  install.sh  pyproject.toml  requirements.txt
src/sshguard_dashboard/: blocking.py  config.py  daemon.py  detection.py  log_watcher.py  persistence.py  threshold.py  web.py
src/sshguard_dashboard/templates/: dashboard.html
systemd/: sshguard-dashboard.service  sshguard-web.service
