[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sshguard-dashboard"
version = "0.1.0"
description = "SSH brute-force detection daemon with web dashboard"
requires-python = ">=3.10"
dependencies = [
    "watchdog>=6.0.0",
    "flask>=3.1.0",
    "gunicorn>=25.3.0",
    "gevent>=24.2.1",
    "filelock>=3.13.0",
    "click>=8.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sshguard_dashboard = ["templates/*.html"]
